GPC/tests/examples/pass/methodPass2.gpc

GPRM::Kernel::Test test;
GPRM::Kernel::Test tests[5];

int GPRM::Test::fun(int i) {return i;}

int GPTM::Test::methodPass2() {

    tests[0].m1(test.m2());
    test.m1(tests[0].m2());
    int n1 = tests[1].m1(test.m2());    
    return 0;

}
