GPC/tests/examples/fail/compareWrong.gpc


int compareWrong() {

    int x = 5;
    double y = 6.0;
    bool z = y  == x;
    return x;

}
